Add Spark reference to text, it fits.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8893 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -163,4 +163,5 @@
   title = "{Spark: Modular, Composable Shaders for Graphics Hardware}",
   booktitle = "{Proceedings of SIGGRAPH 2011}",
   publisher = {ACM},
+  year = {2011},
 }
