Add section dividing slides.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9025 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
+++ b/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
@@ -1,5 +1,7 @@
 \documentclass{beamer}
 
+% TODO: no right top col on header?
+
 \mode<presentation>
 {
   \useinnertheme[shadow=true]{rounded} % default from Warsaw theme
@@ -32,7 +34,12 @@
 \pgfdeclareimage[height=2cm]{ii-and-kambivrml}{ii-and-kambivrml}
 \logo{\pgfuseimage{ii-and-kambivrml}}
 
-\newcommand*{\codeem}[1]{\textbf{#1}}
+\AtBeginSection[]
+{
+  \begin{frame}<beamer>{Outline}
+    \tableofcontents[currentsection,currentsubsection]
+  \end{frame}
+}
 
 \begin{document}
 
